--- a/requirements.yaml
+++ b/requirements.yaml
@@ -2,11 +2,9 @@ name: zip2county_master_xwalk
 channels:
   - conda-forge
   - defaults
+  - bioconda
 dependencies:
-  - python=3.10
-  - pandas
-  - pip=24.0
-  - pip:
-    - requests
-    - snakemake==7.32.4
-    - pulp==2.7.0
+  - python=3.11
+  - snakemake=8.16
+  - hydra-core=1.3.2
+  - pandas=2.2.2
